accommodation text alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -275,25 +275,24 @@ nav {
 
 .roomDescription {
   margin-left: 20px;
-  margin-top: 50px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
+  text-align: center;
   position: relative;
   color: #d4d4d4;
   max-width: 50%;
 }
 
 .roomDescription h4 {
-  margin-left: 0;
   margin-top: 20px;
   letter-spacing: 2px;
   line-height: 3;
-  /*text-transform: uppercase;*/
 }
 
 .roomDescription h3 {
-  margin-left: 40%;
-  margin-top: 50px;
+  /*margin-left: 40%;*/
+  /*margin-top: 50px;*/
   letter-spacing: 5px;
   color: #fdcc01;
   text-transform: uppercase;
